first commit on new branch

--- a/EckoOfTheFox-FrontEnd/domestic.html
+++ b/EckoOfTheFox-FrontEnd/domestic.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/non-index-style.css" />
-    <script type="module" src="/javascript/main.js"></script>
-    <script src="/javascript/navlogo.js" defer></script>
+    <script type="module" src="/javascript/pages/main.js"></script>
+    <script src="/javascript/pages/navlogo.js" defer></script>
   </head>
   <body
     class="bg-amber-50 text-justify"
