--- a/EckoOfTheFox-FrontEnd/index.html
+++ b/EckoOfTheFox-FrontEnd/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script type="module" src="/javascript/main.js"></script>
+    <script type="module" src="/javascript/pages/main.js"></script>
     p
   </head>
   <body
