--- a/EckoOfTheFox-FrontEnd/login.html
+++ b/EckoOfTheFox-FrontEnd/login.html
@@ -78,7 +78,7 @@
     <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <main
       id = "login-main"
-      class="mt-18 max-w-[800px] flex flex-col gap-4 text-center px-2 mx-0.5 lg:mt-28 lg:mx-auto lg:border-0 flex-grow bg"
+      class="mt-18 max-w-[800px] flex flex-col gap-4 text-center px-2 mx-0.5 lg:mt-28 lg:mx-auto lg:border-0 flex-grow"
     >
       <form class="loginOrRegister" id="loginDiv">
         <h1 class="self-center text-center mb-8">Login</h1>
