worked with different comment issues

--- a/EckoOfTheFox-FrontEnd/opinion.html
+++ b/EckoOfTheFox-FrontEnd/opinion.html
@@ -11,7 +11,9 @@
     <script type="module" src="./javascript/pages/main.js"></script>
     <script src="./javascript/pages/navlogo.js" defer></script>
     <script type="module" src="./javascript/pages/opinion.js"></script>
+    <script type="module" src="./javascript/pages/opinions.js"></script>
     <script type="module" src="./javascript/objects/opinionMaker.js"></script>
+    <script type="module" src="./javascript/objects/commentMaker.js"></script>
   </head>
   <body
     class="flex flex-col min-h-screen bg-amber-50 text-justify align-middle"
