finally fixed comment save, publish and like/dislike. Improved access to localStorage through listOfComments.js and listOfOpinions.js

--- a/EckoOfTheFox-FrontEnd/opinion.html
+++ b/EckoOfTheFox-FrontEnd/opinion.html
@@ -14,6 +14,8 @@
     <script type="module" src="./javascript/pages/opinions.js"></script>
     <script type="module" src="./javascript/objects/opinionMaker.js"></script>
     <script type="module" src="./javascript/objects/commentMaker.js"></script>
+    <script type="module" src="./javascript/objects/listOfComments.js"></script>
+    <script type="module" src="./javascript/objects/listOfOpinions.js"></script>
   </head>
   <body
     class="flex flex-col min-h-screen bg-amber-50 text-justify align-middle"
