--- a/EckoOfTheFox-FrontEnd/opinions.html
+++ b/EckoOfTheFox-FrontEnd/opinions.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="/css/opinion.css" />
     <script src="./javascript/pages/opinions.js" type="module"></script>
     <script src="./javascript/objects/opinionMaker.js" type="module"></script>
+    <script src="./javascript/objects/listOfOpinions.js" type="module"></script>
     <script src="./javascript/pages/main.js" type="module"></script>
     <script src="./javascript/objects/commentMaker.js" type="module"></script>
     <script src="./javascript/pages/comment.js" type="module"></script>
+    <script type="module" src="./javascript/objects/listOfComments.js"></script>
     <script src="./javascript/pages/navlogo.js" defer></script>
   </head>
   <body
