prepared index to receive javascript opinions

--- a/EckoOfTheFox-FrontEnd/index.html
+++ b/EckoOfTheFox-FrontEnd/index.html
@@ -523,187 +523,138 @@
         <!-- first four (always visible)++++++++++++++++++++++++++++ -->
         <div class="flex flex-wrap justify-center gap-4 sm:gap-2">
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
-            <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+          <div class="index-opinion" id="indexOpinion-1">
+            <a href="#">
+              <h3>
                 1
               </h3>
               <h4 class="text-wrap font-[1.25rem] text-left content-center">
                 It's been said before...
               </h4>
             </a>
-            <p class="text-sm">
+            <p>
               But I am old, so I'll say it again: the Earth is flatter than an
               ironing board, I am not crazy...
             </p>
-            <i class="author mt-auto">Grumpy Dwarf</i>
+            <i class="author">Grumpy Dwarf</i>
           </div>
 
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
-            <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+          <div class="index-opinion" id="indexOpinion-2">
+            <a href="#">
+              <h3>
                 2
               </h3>
               <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                I like to move it, move it...
+                It's been said before...
               </h4>
             </a>
-            <p class="text-sm">
-              I like to move it, move it. I like to move it, move it. I like to
-              move it!
+            <p>
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
             </p>
-            <i class="author mt-auto">Secret Dentist</i>
+            <i class="author">Grumpy Dwarf</i>
           </div>
 
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
-            <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+          <div class="index-opinion" id="indexOpinion-3">
+            <a href="#">
+              <h3>
                 3
               </h3>
               <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                What time is it?
+                It's been said before...
               </h4>
             </a>
-            <p class="text-sm">
-              Seriously I lost my watch. I was a golden Breitling worth
-              10.000$...
+            <p>
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
             </p>
-            <i class="author mt-auto">I forgot</i>
+            <i class="author">Grumpy Dwarf</i>
           </div>
 
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
-            <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+          <div class="index-opinion" id="indexOpinion-4">
+            <a href="#">
+              <h3>
                 4
               </h3>
               <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                Heziekel 25:17
+                It's been said before...
               </h4>
             </a>
-            <p class="text-sm">
-              And you will know, my name is the lord when I lay my vengeance
-              upon you
+            <p>
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
             </p>
-            <i class="author mt-auto">Jules V.</i>
+            <i class="author">Grumpy Dwarf</i>
           </div>
-        </div>
-
-        <!-- next four (hidden for mobiles)+++++++++++++++++++++++++ -->
-        <div
-          class="hidden sm:flex flex-wrap justify-center gap-4 sm:gap-2 sm:visible"
-        >
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
-            <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+          <div class="index-opinion" id="indexOpinion-5">
+            <a href="#">
+              <h3>
                 5
               </h3>
               <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                I'm looking forward to it!
+                It's been said before...
               </h4>
             </a>
-            <p class="text-sm mt-auto">
-              When prime minister Mette Frederiksen announced we'd be sold to
-              Panama, I was happy. I am the only spanish speaking inuit in the
-              village..
+            <p>
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
             </p>
-            <i class="author">Qanilima, el hielo que se va</i>
+            <i class="author">Grumpy Dwarf</i>
           </div>
 
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
-            <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+          <div class="index-opinion" id="indexOpinion-6">
+            <a href="#">
+              <h3>
                 6
               </h3>
               <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                God is real, his name is Bob
+                It's been said before...
               </h4>
             </a>
-            <p class="text-sm mt-auto">
-              The clarity of it all hit me last sunday. After a bottle of
-              absynth I saw Nicole Kidman as a fairy and she told me the
-              truth...
+            <p>
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
             </p>
-            <i class="author">Secret Dentist</i>
+            <i class="author">Grumpy Dwarf</i>
           </div>
 
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
-            <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+          <div class="index-opinion" id="indexOpinion-7">
+            <a href="#">
+              <h3>
                 7
               </h3>
               <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                I remember meeting Elvis
+                It's been said before...
               </h4>
             </a>
-            <p class="text-sm">
-              It was moonlit night at LAX last year. I was between connecting
-              flights and in the Emirate Airline lounge we bumped into each
-              other...
+            <p>
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
             </p>
-            <i class="author mt-auto">I forgot</i>
+            <i class="author">Grumpy Dwarf</i>
           </div>
 
           <!-- opinion------------------------------------------------ -->
-          <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
-          >
+          <div class="index-opinion" id="indexOpinion-8">
             <a class="flex flex-row gap-2" href="#">
-              <h3
-                style="font-family: Mr Dafoe; font-size: 1.75rem"
-                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
-              >
+              <h3>
                 8
               </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+              <h4>
                 I kant spel 2 good
               </h4>
             </a>
-            <p class="text-sm">
+            <p>
               Mi ont sarA seys ei nid to learn hauw too writte ei shoold lissen
               too heur becose shi eez mi moder too...
             </p>
-            <i class="author mt-auto">Deliverance</i>
+            <i class="author">Deliverance</i>
           </div>
         </div>
       </div>
