--- a/EckoOfTheFox-FrontEnd/index.html
+++ b/EckoOfTheFox-FrontEnd/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/png" href="/logos/EoF logo.png" />
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <script type="module" src="./javascript/pages/indexOpinionsSetup.js"></script>
+    <script type="module" src="./javascript/objects/opinionMaker.js"></script>
+    <script type="module" src="./javascript/objects/listOfOpinions.js"></script>
     <script type="module" src="/javascript/pages/main.js"></script>
     p
   </head>
@@ -518,146 +521,9 @@
       class="flex flex-col items-center px-2 pb-1 mx-0.5 text-justify border-t lg:max-w-[1300px] lg:mx-auto"
     >
       <!-- OPINIONS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <h1 class="underline">Opinion Columnists</h1>
-      <div class="flex flex-col gap-2 pb-1 border-b">
-        <!-- first four (always visible)++++++++++++++++++++++++++++ -->
-        <div class="flex flex-wrap justify-center gap-4 sm:gap-2">
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-1">
-            <a href="#">
-              <h3>
-                1
-              </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
-              </h4>
-            </a>
-            <p>
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
-            </p>
-            <i class="author">Grumpy Dwarf</i>
-          </div>
-
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-2">
-            <a href="#">
-              <h3>
-                2
-              </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
-              </h4>
-            </a>
-            <p>
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
-            </p>
-            <i class="author">Grumpy Dwarf</i>
-          </div>
-
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-3">
-            <a href="#">
-              <h3>
-                3
-              </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
-              </h4>
-            </a>
-            <p>
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
-            </p>
-            <i class="author">Grumpy Dwarf</i>
-          </div>
-
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-4">
-            <a href="#">
-              <h3>
-                4
-              </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
-              </h4>
-            </a>
-            <p>
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
-            </p>
-            <i class="author">Grumpy Dwarf</i>
-          </div>
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-5">
-            <a href="#">
-              <h3>
-                5
-              </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
-              </h4>
-            </a>
-            <p>
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
-            </p>
-            <i class="author">Grumpy Dwarf</i>
-          </div>
-
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-6">
-            <a href="#">
-              <h3>
-                6
-              </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
-              </h4>
-            </a>
-            <p>
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
-            </p>
-            <i class="author">Grumpy Dwarf</i>
-          </div>
-
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-7">
-            <a href="#">
-              <h3>
-                7
-              </h3>
-              <h4 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
-              </h4>
-            </a>
-            <p>
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
-            </p>
-            <i class="author">Grumpy Dwarf</i>
-          </div>
-
-          <!-- opinion------------------------------------------------ -->
-          <div class="index-opinion" id="indexOpinion-8">
-            <a class="flex flex-row gap-2" href="#">
-              <h3>
-                8
-              </h3>
-              <h4>
-                I kant spel 2 good
-              </h4>
-            </a>
-            <p>
-              Mi ont sarA seys ei nid to learn hauw too writte ei shoold lissen
-              too heur becose shi eez mi moder too...
-            </p>
-            <i class="author">Deliverance</i>
-          </div>
+      <h1 class="underline"><a href="opinions.html">Opinion Columnists</a></h1>
+        <div class="flex flex-wrap justify-center gap-4 sm:gap-2 mb-4" id="index-opinions">
         </div>
-      </div>
     </section>
 
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
